# spamlite

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  _notes.md
_doc/: 2026-03-03-algorithm-design.md  2026-03-03-memory-architecture.md  2026-04-14-spamlite-improvement-plan.md  2026-06-12-per-user-tuning.md  2026-06-13-porting-python-to-mix-stats-collect.md  2026-06-26-spamprobe-comparative-review.md
_journal/: 2026-03-03.md  2026-04-14.md  2026-04-15.md  2026-04-30.md  2026-06-12.md  2026-06-13.md
deploy/: README.md  retrain-as-ham.sieve  retrain-as-spam.sieve  spamfilter  spamlite-daily-digest  spamlite-mbx-review.mix  spamlite-mrn-review.mix  spamlite-sieve-mbx  spamlite-stats-collect  spamlite-threshold-digest  spamlite-tune-nightly
src/: classifier.rs  lib.rs  main.rs  storage.rs  tokenizer.rs
