[package]
name = "spamlite"
version = "0.4.0"
edition = "2021"
description = "Per-user Bayesian spam filter — drop-in spamprobe replacement"
license = "MIT"
authors = ["Mark Constable <mc@netserva.org>"]
repository = "https://github.com/markc/spamlite"

[dependencies]
mail-parser = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }
nanohtml2text = "0.2"

[[bin]]
name = "spamlite"
path = "src/main.rs"

[[bin]]
name = "spamlite-eval"
path = "src/bin/eval.rs"

[[bin]]
name = "spamlite-harvest"
path = "src/bin/harvest.rs"

[[bin]]
name = "spamlite-correlate"
path = "src/bin/correlate.rs"

[[bin]]
name = "spamlite-shadow-report"
path = "src/bin/shadow_report.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
